2009-09-30  Jeffrey Stedfast  <fejj@novell.com>

	* tests/test-mbox.c: Use GDir instead of POSIX's dirent API to aid
	in portability to Windows.

2009-09-03  Jeffrey Stedfast  <fejj@novell.com>

	* mono/gmime-sharp.dll.config.in: Simply target
	libgmime-@GMIME_API_VERSION@.so since we are now properly
	versioning libgmime-2.6.so

2009-08-12  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (charset_convert): If iconv() fails, treat
	conditions where outleft == 0 the same as if we had gotten an
	E2BIG error (e.g. we need to grow the output buffer) so that we
	don't overrun it while appending a '?' placeholder character.

2009-07-04  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Check for GpgME needed for S/MIME support.

	* gmime/Makefile.am: Include gmime-pkcs7-context.[c,h] in the
	build.

	* gmime/gmime-pkcs7-context.[c,h]: New source files implementing
	the pkcs7 cipher context using GpgMe.

2009-07-04  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_signer_info): Updated
	for API changes to the GMimeSigner stuff.

	* gmime/gmime-cipher-context.c (g_mime_signer_new): Initialize the
	newly added fields.
	(g_mime_signer_free): Free the newly added fields.
	(g_mime_signer_set_issuer_serial): New field accessor.
	(g_mime_signer_get_issuer_serial): Same.
	(g_mime_signer_set_issuer_name): Another new accessor.
	(g_mime_signer_get_issuer_name): Same.
	(g_mime_signer_set_email): And another...
	(g_mime_signer_get_email): Same.
	(g_mime_signer_set_sig_created): Renamed from
	g_mime_signer_set_created().
	(g_mime_signer_get_sig_created): Renamed from
	g_mime_signer_get_created().
	(g_mime_signer_set_sig_expires): Renamed from
	g_mime_signer_set_expires().
	(g_mime_signer_get_sig_expires): Renamed from
	g_mime_signer_get_expires().
	(g_mime_signer_set_key_created): New field accesor.
	(g_mime_signer_get_key_created): Same.
	(g_mime_signer_set_key_expires): Same.
	(g_mime_signer_get_key_expires): Same.
