@@ -1,5 +1,8 @@
 2009-09-30  Jeffrey Stedfast  <fejj@novell.com>
 
+	* tests/test-streams.c: Use GDir instead of POSIX's dirent API and
+	also conditionally disable mmap tests.
+
 	* tests/test-mbox.c: Use GDir instead of POSIX's dirent API to aid
 	in portability to Windows.
 
